# BolaNaRede-django

./: db.sqlite3  pyproject.toml
bolanarede/: models.py  serializers.py
config/: settings.py  urls.py
